import arc.util.serialization.Jval

buildscript {
	repositories {
		mavenCentral()
		maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

		//Downloads the server-release JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
		ivy {
			url 'https://github.com/'
			patternLayout{artifact '/[organisation]/[module]/releases/download/[revision]/server-release.jar'}
			metadataSources{ artifact() }
		}

		//"Latest" option to depend on BE builds.
		ivy {
			url 'https://github.com/'
			patternLayout{artifact '/[organisation]/[module]/releases/download/master/[revision].jar'}
			metadataSources{ artifact() }
		}

		//Do the same with jabel
		ivy {
			url 'https://github.com/'
			patternLayout{artifact '/[organisation]/[module]/releases/download/[revision]/jabel.jar'}
			metadataSources{ artifact() }
		}
	}

	dependencies {
		classpath "Anuken:Mindustry:$mindustryVersion"
	}
}

apply plugin: 'java'

sourceSets.main.java.srcDir('src')

repositories {
	mavenCentral()
	maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }

	//Downloads the server-release JAR file from Mindustry releases; does not use any real repository. Surprisingly, this is the most reliable option.
	ivy {
		url 'https://github.com/'
		patternLayout{artifact '/[organisation]/[module]/releases/download/[revision]/server-release.jar'}
		metadataSources{ artifact() }
	}

	//"Latest" option to depend on BE builds.
	ivy {
		url 'https://github.com/'
		patternLayout{artifact '/[organisation]/[module]/releases/download/master/[revision].jar'}
		metadataSources{ artifact() }
	}

	//Do the same with jabel
	ivy {
		url 'https://github.com/'
		patternLayout{artifact '/[organisation]/[module]/releases/download/[revision]/jabel.jar'}
		metadataSources{ artifact() }
	}
}

java {
	targetCompatibility = JavaVersion.VERSION_16
	sourceCompatibility = JavaVersion.VERSION_16
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = "UTF-8"

	options.compilerArgs.addAll([
			"--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
			"--add-exports", "java.base/jdk.internal.module=ALL-UNNAMED",
			"--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED",
			"--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
	])
}

dependencies {
	compileOnly "Anuken:Mindustry:$mindustryVersion"

	def libsDir = project(":").projectDir

	compileOnly files(
			"$libsDir/libs/EndfieldMod-260324a.jar"
	)
}

tasks.register("list") {
	inputs.files tasks.compileJava, configurations.runtimeClasspath

	def output = file("$temporaryDir/classes-desktop.json")
	outputs.file output

	doFirst {
		def packages = Jval.newArray()
		def classes = Jval.newArray()

		def proc = { def proc, String path, File dir ->
			for (def child : dir.listFiles()) {
				if (child.directory) {
					def name = child.name
					if (!path.startsWith("endfield") && name != "endfield") continue

					def visited = path.empty ? name : "$path.$name"

					packages.add(visited)
					proc(proc, visited, child)
				} else {
					def dot = child.name.lastIndexOf(".")
					if (dot == -1) continue

					def name = child.name.substring(0, dot)
					def ext = child.name.substring(dot + 1)

					if (ext == "class") classes.add("$path.$name")
				}
			}
		}

		sourceSets.main.runtimeClasspath.forEach { proc(proc, "", it) }

		def compacted = Jval.newObject().put("packages", packages).put("classes", classes)
		output.withWriter { compacted.writeTo(it, Jval.Jformat.formatted) }
	}
}

jar {
	archiveFileName = "${rootProject.name}Desktop.jar"
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE

	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}